--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-html {
+.bg {
     background-color: #c5c5c5;
     font-size: 10px;
     font-family: "Bahnschrift", Times, serif;
@@ -16,6 +16,13 @@ html {
     color: #ffffff !important;
 }
 
+.nav-text-title_font {
+    font-size: 4rem;
+    font-family: "Bahnschrift", Times, serif;
+    margin-left: 5rem;
+    color: #ffffff !important;
+}
+
 .nav-font {
     font-size: 2rem;
     font-family: "Ebrima", Times, serif;
@@ -25,11 +32,11 @@ html {
 .nav-font:hover {
     font-size: 2rem;
     font-family: "Ebrima", Times, serif;
-    color: #717fad !important;
+    color: #3c46d9 !important;
 }
 
 .nav-padding {
-    padding-left: 100rem;
+    padding-left: 95rem;
 }
 
 .word {
@@ -39,4 +46,70 @@ html {
 .nav-padding-item {
     padding-left: 3rem;
     padding-right: 3rem;
+}
+
+.text-card {
+    padding-top: 15rem;
+    padding-left: 5rem;
+    width: 52rem;
+}
+
+.text-card-bg {
+    background-color: #c5c5c5 !important;
+}
+
+.text-card-font_title {
+    font-size: 2.5rem;
+    color: #3c46d9 !important;
+    font-family: "Bahnschrift", Times, serif;
+}
+
+.text-card-font_body {
+    font-size: 1.5rem;
+    color: #3c46d9 !important;
+    font-family: "Bahnschrift", Times, serif;
+}
+
+.image-card {
+    padding-top: 5rem;
+    padding-left: 5rem;
+    width: 66rem;
+}
+
+.image-card-bg {
+    background-color: #c5c5c5 !important;
+}
+
+.image-card-txt_size {
+    width: 64rem;
+}
+
+.image-card-img_size {
+    margin-left: 1rem;
+    height: 36rem;
+    width: 64rem;
+}
+
+.image-card-img_border {
+    border: 4px solid #3c46d9;
+    border-radius: 8px;
+}
+
+.image-card-font_title {
+    font-size: 2.5rem;
+    color: #3c46d9 !important;
+    font-family: "Bahnschrift", Times, serif;
+    text-decoration: underline;
+}
+
+.image-card-font_subtitle {
+    font-size: 2rem;
+    color: #3c46d9 !important;
+    font-family: "Bahnschrift", Times, serif;
+}
+
+.image-card-font_body {
+    font-size: 1.5rem;
+    color: #3c46d9 !important;
+    font-family: "Bahnschrift", Times, serif;
 }
