Add main body section and images to 'About' page

--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,11 @@
     padding-left: 10rem;
 }
 
+.image-block-left_bottom_overlap {
+    padding-left: 17.5rem;
+    padding-top: 5rem;
+}
+
 .image-block-right {
     padding-top: 12rem;
 }
